--- a/src/Css/Navbar.css
+++ b/src/Css/Navbar.css
@@ -157,6 +157,11 @@
     display: none;
 }
 
+.menu-icons {
+    display: flex;
+
+}
+
 
 
 
@@ -194,7 +199,6 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding-left: 1rem;
         box-shadow: 3px 5px 10px rgba(0, 0, 0, 0.3);
     }
     .btn-show {
