--- a/src/App.css
+++ b/src/App.css
@@ -231,19 +231,52 @@ img {
 
 
 
-/* ------------------------------portfolio--------------------------------- */
-#portfölj {
-    height: 100vh;
-    padding-top: 5rem;
 
+/* ------------------------------portfolio--------------------------------- */
+.portfolio-wrapper {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 3rem;
+    margin: 0 auto;
+}
+.portfolio-card {
+    border-radius: .5rem;
+}
+.portfolio-card img {
+    height: auto;
+    margin-bottom: 1rem;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.323);
+    border-radius: .5rem;
+}
+.portfolio-text {
+    text-align: start;
+    padding-inline: 1rem;
+}
+.knowledge-info {
     display: flex;
-    align-items: center;
-    flex-direction: column;
-    position: relative;
+    gap: 1rem;
+    margin-block: 1rem;
 }
-#portfölj p {
-    margin-block: 1rem 2rem;
+.knowledge-patch {
+    background-color: rgb(0, 0, 0);
+    opacity: 50%;
+    color: white;
+    padding: 5px 10px;
+    border-radius: .3rem;
 }
+.knowledge-patch:hover {
+    opacity: 100%;
+    cursor: default;
+}
+
+/* @media screen and (min-width: 568px) { */
+@media screen and (min-width: 700px) {
+    .portfolio-wrapper {
+        grid-template-columns: 1fr 1fr;
+        max-width: 1300px;
+    }
+}
+
 
 
 
