--- a/src/Css/Carousel.css
+++ b/src/Css/Carousel.css
@@ -1,4 +1,4 @@
-.carousel {
+/* .carousel {
     overflow: hidden;
     margin-block: 4rem 2rem;
 }
@@ -18,7 +18,6 @@
 .carousel-item img {
     width: 400px;
     border-radius: 1rem;
-    /* border: 2px solid lightblue; */
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.323);
 }
 .carousel-item .portfolio-text {
@@ -78,4 +77,4 @@
     border: none;
     margin: 0;
     padding: 0;
-}
+} */
