--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,49 @@
+
 :root {
     --clr-blue: #7BA3ED;
+    --bg: white;
 }
+
+/* variables dark theme */
+[data-theme="dark"] {
+    --clr-blue: pink;
+    --bg: rgb(33, 33, 33);
+}
+.checkbox {
+    position: relative;
+}
+input[type="checkbox"] {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    appearance: none;
+    outline: none;
+}
+.checkbox:hover .sun,
+.checkbox:hover .moon {
+    color: var(--clr-blue);
+}
+
+[data-theme="dark"] .sun,
+[data-theme="light"] .moon {
+    display: none;
+}
+[data-theme="dark"] .moon,
+[data-theme="light"] .sun {
+    display: block;
+}
+
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    transition: all 0.3s ease-in-out;
 }
 html, body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 300;
-    background-color: white;
+    background-color: var(--bg);
     scroll-behavior: smooth;
     overflow-x: hidden;
 }
@@ -18,6 +51,11 @@ html, body {
     width: 90%;
     margin: 0 auto;
 }
+
+
+
+
+
 a {
     text-decoration: none;
     color: black;
@@ -74,15 +112,17 @@ img {
 
 /* ------------------------------scroll button--------------------------------- */
 .btn-scroll {
-    position: fixed; 
+    position: fixed;
     right: 40px;
     bottom: 80px;
     color: var(--clr-blue);
     cursor: pointer;
     transition: .3s;
+    background-color: white;
+    border-radius: .5rem;
 }
 .btn-scroll:hover {
-    color: black;
+    color: #427fef;
 }
 
 
@@ -126,7 +166,7 @@ img {
     display: none;
 }
 
-.home-img, 
+.home-img,
 .about-img {
     max-width: 300px;
 }
@@ -244,7 +284,6 @@ img {
 }
 .portfolio-card img {
     height: auto;
-    margin-bottom: 1rem;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.323);
     border-radius: .5rem;
 }
@@ -258,14 +297,13 @@ img {
     margin-block: 1rem;
 }
 .knowledge-patch {
-    background-color: rgb(0, 0, 0);
-    opacity: 50%;
+    background-color: #7BA3ED;
     color: white;
     padding: 5px 10px;
     border-radius: .3rem;
 }
 .knowledge-patch:hover {
-    opacity: 100%;
+    background-color: #427fef;
     cursor: default;
 }
 
@@ -284,10 +322,24 @@ img {
 
 
 /* ------------------------------skills--------------------------------- */
-@media screen and (min-width: 568px) {
+.skills-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    justify-content: center;
+}
+.skills-wrapper img {
+    width: 100%;
+    height: auto;
+    max-width: 100px;
+}
+@media screen and (min-width: 1000px) {
     #kunskaper {
         margin-top: 5rem;
         margin-bottom: 5rem;
+    }
+    .skills-wrapper {
+        gap: 5rem;
     }
 }
 
