--- a/src/App.css
+++ b/src/App.css
@@ -8,13 +8,79 @@
     --box-shadow: 3px 5px 10px rgba(0, 0, 0, 0.3);
 }
 
-/* variables dark theme */
+/* ------------------------------dark theme--------------------------------- */
 [data-theme="dark"] {
     --bg: rgb(42, 42, 42);
     --bg-second: rgb(42, 42, 42);
     --clr-text: white;
     --box-shadow: 3px 5px 10px rgba(255, 255, 255, 0.3);
 }
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+html, body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 300;
+    background-color: var(--bg);
+    color: var(--clr-text);
+    scroll-behavior: smooth;
+    overflow-x: hidden;
+}
+.container {
+    width: 90%;
+    margin: 0 auto;
+}
+a {
+    text-decoration: none;
+    color: var(--clr-text);
+}
+p {
+    line-height: 22px;
+}
+button {
+    
+    background-color: var(--clr-main);
+    color: var(--bg);
+    border: 2px solid var(--clr-main);
+    border-radius: 5px;
+    padding: .8rem 3.5rem;
+    font-size: large;
+    
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    transition: all 0.2s ease-in;
+}
+button:hover {
+    background-color: var(--bg);
+    border: 2px solid var(--clr-main);
+    color: var(--clr-main);
+    cursor: pointer;
+}
+img {
+    width: 100%;
+    height: 100%;
+}
+.section {
+    padding: 4rem 0 1rem;
+    text-align: center;
+}
+.section-subtitle {
+    margin-bottom: 2rem;
+}
+.grid {
+    display: grid;
+    gap: 1.5rem;
+}
+.blue {
+    color: var(--clr-main);
+}
+
+
+/* ------------------------------dark theme button--------------------------------- */
 .checkbox {
     position: relative;
     color: var(--clr-text);
@@ -47,83 +113,6 @@ input[type="checkbox"]:hover {
 }
 
 
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    /* transition: all 0.2s ease-in; */
-}
-html, body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 300;
-    background-color: var(--bg);
-    scroll-behavior: smooth;
-    overflow-x: hidden;
-}
-.container {
-    width: 90%;
-    margin: 0 auto;
-}
-a {
-    text-decoration: none;
-    color: var(--clr-text);
-}
-h1 {
-    font-size: x-large;
-    color: var(--clr-text);
-}
-h3,
-h2 {
-    color: var(--clr-text);
-}
-p {
-    line-height: 22px;
-    color: var(--clr-text);
-}
-button {
-    padding: .8rem 3.5rem;
-    font-size: large;
-
-    border-radius: 5px;
-    background-color: var(--clr-main);
-    border: 2px solid var(--clr-main);
-    color: var(--bg);
-    
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    transition: all 0.2s ease-in;
-}
-button:hover {
-    background-color: var(--bg);
-    border: 2px solid var(--clr-main);
-    color: var(--clr-main);
-    cursor: pointer;
-}
-/* -------------------------------------------Change name. Am I using it? */
-.blue {
-    color: var(--clr-main);
-}
-img {
-    width: 100%;
-    height: 100%;
-}
-.section {
-    padding: 4rem 0 1rem;
-    text-align: center;
-}
-.section-subtitle {
-    margin-bottom: 2rem;
-}
-
-.grid {
-    display: grid;
-    gap: 1.5rem;
-}
-
-
-
 /* ------------------------------scroll button--------------------------------- */
 .btn-scroll {
     position: fixed;
@@ -141,19 +130,12 @@ img {
 }
 
 
-
-
-
-
-
-
 /* ------------------------------navbar--------------------------------- */
 .navbar {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: flex-end;
-    
     height: 10vh;
 }
 .navbar a {
@@ -172,17 +154,14 @@ img {
     flex-direction: row;
     align-items: center;
 }
-
 .navbar-mobile {
     display: none;
     background-color: var(--bg);
 }
-
 .menu-icons {
     display: flex;
     align-items: center;
 }
-
 .language-option {
     padding-inline: 1rem;
 }
@@ -209,23 +188,22 @@ img {
     .navbar {
         display: none;
     }
-
     .navbar-mobile {
         display: block;
     }
     .nav-menu {
-        /* ------------------------------------might need to be another bg color */
         background-color: var(--bg-second);
+        box-shadow: var(--box-shadow);
+        width: 100%;
+
         position: fixed;
         bottom: 0;
         left: 0;
         z-index: 3;
-        width: 100%;
 
         display: flex;
         justify-content: space-between;
         align-items: center;
-        box-shadow: var(--box-shadow);
     }
     .btn-show {
         padding: 1rem;
@@ -236,27 +214,23 @@ img {
         color: var(--clr-main);
         cursor: pointer;
     }
-    
-    
     .nav-links {
+        background-color: var(--bg-second);
+        box-shadow: var(--box-shadow);
+        width: 100%;
+        height: fit-content;
+        padding: 3rem;
+
         display: grid;
         align-items: center;
         justify-content: center;
         grid-template-columns: repeat(2, 1fr);
         gap: 3rem;
-        padding: 3rem;
-        width: 100%;
-        box-shadow: var(--box-shadow);
-    
 
-        /* --------------------------------------------change color in root */
-        background-color: var(--bg-second);
         position: fixed;
         bottom: 50px;
         left: 0;
         z-index: 3;
-        height: fit-content;
-        width: 100%;
     }
     .nav-links a {
         display: flex;
@@ -272,21 +246,13 @@ img {
     .nav-links a:hover {
         color: var(--clr-main);
     }
-
-
     .show-menu {
         display: none;
     }
 }
 
 
-
-
-
-
-
 /* ------------------------------home--------------------------------- */
-/* SOCIAL ICONS */
 .social-icons {
     display: grid;
     grid-template-columns: max-content;
@@ -300,8 +266,6 @@ img {
     color: var(--clr-main);
 }
 
-
-/* HOME */
 .home {
     height: 90vh;
     display: grid;
@@ -319,12 +283,10 @@ img {
     margin-top: 1rem;
     margin-bottom: 2rem;
 }
-
 .scroll-text {
     display: none;
     transition: all .2s ease-in;
 }
-
 .home-img,
 .about-img {
     max-width: 300px;
@@ -339,7 +301,12 @@ img {
     -webkit-mask-repeat: no-repeat;
 }
 
-
+/* for small devices */
+@media screen and (max-width: 350px) {
+    h1 {
+        font-size: x-large;
+    }
+}
 /* for medium devices */
 @media screen and (min-width: 700px) {
     h1 {
@@ -363,26 +330,20 @@ img {
         gap: 10px;
         position: absolute;
         bottom: 2rem;
-        /* transition: .3s; */
     }
     .scroll-text:hover {
         transform: translateY(.5rem);
     }
 }
-
 /* for big devices */
 @media screen and (min-width: 1024px) {
     .social-icons {
-        /* transform: translateX(6rem); */
         padding-right: 6rem;
     }
     h1 {
         font-size: 40px;
     }
 }
-
-
-
 
 
 /* ------------------------------about--------------------------------- */
@@ -426,9 +387,6 @@ img {
         max-width: 500px;
     }
 }
-
-
-
 
 
 /* ------------------------------portfolio--------------------------------- */
@@ -479,11 +437,6 @@ img {
 }
 
 
-
-
-
-
-
 /* ------------------------------skills--------------------------------- */
 .skills-wrapper {
     display: flex;
@@ -496,6 +449,7 @@ img {
     height: auto;
     max-width: 100px;
 }
+
 @media screen and (min-width: 1000px) {
     #kunskaper {
         margin-top: 5rem;
@@ -505,10 +459,6 @@ img {
         gap: 5rem;
     }
 }
-
-
-
-
 
 /* ------------------------------footer--------------------------------- */
 .footer {
@@ -532,11 +482,18 @@ img {
     color: var(--clr-main);
 }
 
+/* for small devices */
+@media screen and (max-width: 568px) {
+    .contact-info {
+        align-items: start;
+        flex-direction: column;
+        gap: 1rem;
+    }
+}
 /* for big devices */
 @media screen and (min-width: 1024px) {
     .footer {
         padding-top: 5rem;
-
         grid-template-columns: 1fr 400px .5fr;
         align-items: center;
         gap: 0;
@@ -545,16 +502,10 @@ img {
     .footer-center-section {
         text-align: start;
     }
-    .contact-info {
-        justify-content: left;
-    }
     .footer-right-section {
         display: grid;
     }
 }
-
-
-
 
 /* FOOTERS COPY MESSAGE */
 .btn-copy {
@@ -591,12 +542,3 @@ img {
     display: block;
 
 }
-
-
-
-
-
-
-
-
-
